# lp

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  conanfile.py  update_platform.sh
cmake/: FindJsonCpp.cmake  FindNM.cmake  FindQRencode.cmake  SetupToolchainRPI.cmake
conf/hostapd/: hostapd.conf  hostapd.wpa_psk
doc/: project_log.md  setup.md  sources.md
include/: automounter.h  bcm_host_wrapper.h  dispmanx.h  logger.h  network.h  posix.h  qrwidget.h  secondary_display.h
src/: automounter.cpp  bcm_host.cpp  dispmanx.cpp  logger.cpp  main.cpp  network.cpp  qrwidget.cpp  secondary_display.cpp
